--- a/_includes/icon-gitlab.html
+++ b/_includes/icon-gitlab.html
@@ -1,2 +1,4 @@
-<a href="https://gitlab.com/{{ include.username }}"><span class="icon icon--gitlab">{% include icon-gitlab.svg
-    %}</span><span class="username">{{ include.username }}</span></a>
+<a href="https://gitlab.com/{{ include.username }}" target="_blank">
+    <span class="icon icon--gitlab">{% include icon-gitlab.svg %}</span>
+    <span class="username">{{ include.username }}</span>
+</a>
