--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,12 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>&copy;2025 Soulsbros</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
@@ -38,7 +37,5 @@
         <p>{{ site.description }}</p>
       </div>
     </div>
-
   </div>
-
 </footer>
