Fix people layout

--- a/_includes/people.html
+++ b/_includes/people.html
@@ -1,5 +1,5 @@
 <div class="devsContainer">
-  <div>
+  <div class="card">
     <img src="/img/pic_steeven.jpg">
     <div class="name">Stefano</div>
     <div>Site Reliability Engineer @ <a href="https://www.swisscom.ch/en/business.html" target="_blank">Swisscom</a>
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="card">
     <img src="/img/pic_fire.jpg">
     <div class="name">Sasha</div>
     <div>MSc Informatics student @ <a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
@@ -40,10 +40,10 @@
     </div>
   </div>
 
-  <div>
+  <div class="card">
     <img src="/img/pic_fra.jpg">
     <div class="name">Fra</div>
-    <div>BSc student @ <a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
+    <div>BSc Informatics student @ <a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
     <div>
       <a href="https://www.linkedin.com/in/francesc-jordi-sacco-cremonesi" target="_blank">
         <img
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="card">
     <img src="/img/pic_brites.jpg">
     <div class="name">Andrea</div>
     <div>Software Engineer in Bioinformatics @ <a href="https://sib.swiss" target="_blank">SIB</a></div>
