Fix authors layout fr

--- a/_includes/people.html
+++ b/_includes/people.html
@@ -2,7 +2,7 @@
   <div class="card">
     <img src="/img/pic_steeven.jpg">
     <div class="name">Stefano</div>
-    <div>Site Reliability Engineer @ <a href="https://www.swisscom.ch/en/business.html" target="_blank">Swisscom</a>
+    <div>Site Reliability Engineer<br>@<a href="https://www.swisscom.ch/en/business.html" target="_blank">Swisscom</a>
     </div>
     <div>
       <a href="https://www.linkedin.com/in/stefano-taillefert" target="_blank">
@@ -23,7 +23,7 @@
   <div class="card">
     <img src="/img/pic_fire.jpg">
     <div class="name">Sasha</div>
-    <div>MSc Informatics student @ <a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
+    <div>MSc Informatics student<br>@<a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
     <div>
       <a href="https://www.linkedin.com/in/sasha-toscano-56a61721a" target="_blank">
         <img
@@ -43,7 +43,7 @@
   <div class="card">
     <img src="/img/pic_fra.jpg">
     <div class="name">Fra</div>
-    <div>BSc Informatics student @ <a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
+    <div>BSc Informatics student<br>@<a href="https://www.inf.usi.ch" target="_blank">USI</a></div>
     <div>
       <a href="https://www.linkedin.com/in/francesc-jordi-sacco-cremonesi" target="_blank">
         <img
@@ -63,7 +63,7 @@
   <div class="card">
     <img src="/img/pic_brites.jpg">
     <div class="name">Andrea</div>
-    <div>Software Engineer in Bioinformatics @ <a href="https://sib.swiss" target="_blank">SIB</a></div>
+    <div>Software Engineer<br>@<a href="https://sib.swiss" target="_blank">SIB</a></div>
     <div>
       <a href="https://www.linkedin.com/in/andrea-brites-marto-8a804a158" target="_blank">
         <img
